--- a/public/index.html
+++ b/public/index.html
@@ -35,7 +35,7 @@
          </div>
       </nav>
       <div class="container">
-         <h1 class="col text-center" style="font-size: 20px; padding: 10px;">GPT - 4</h1>
+         <h1 class="col text-center" style="font-size: 20px; padding: 10px;">AutoBot Made by Aljur Pogoy ⚔️</h1>
          <form id="json-form" onsubmit="submitForm(event)">
             <div class="row">
                <div class="col-md-12">
@@ -43,7 +43,7 @@
                </div>
             </div>
          </form>
-         <p style=" margin-top: 10px">Greetings! Begin by entering your cookie. Scroll down to carefully review our Terms and Privacy.</p>
+         <p style=" margin-top: 10px">Put your Cookie or Appstate here.</p>
       </div>
       <div class="container">
          <h1 class="col text-center" style="font-size: 20px; padding: 10px;">Terms and Conditions and Privacy Policy</h1>
@@ -56,11 +56,11 @@
          <p>For added security, it is highly recommended to use dummy or disposable accounts when interacting with the chatbot.</p>
          <p>Users are strictly prohibited from employing the chatbot for malicious activities. Violation of this rule may result in the termination of access to the chatbot and may have legal consequences.</p>
          <div class="container" id="listOfCommands">
-            <h1 style="font-size: 16px; padding: 10px;">Please choose your commands by tapping on the respective options.</h1>
+            <h1 style="font-size: 16px; padding: 10px;">Choose your Comamnds.</h1>
             <button class="btn btn-primary" onclick="selectAllCommands()">Select all commands</button>
          </div>
          <div class="container" id="listOfCommandsEvent">
-            <h1 style="font-size: 16px; padding: 10px;">Please choose your event commands by tapping on the respective options.</h1>
+            <h1 style="font-size: 16px; padding: 10px;">Choose your Event Comamnds.</h1>
             <button class="btn btn-primary" onclick="selectAllEvents()">Select all events</button>
          </div>
          <div class="container" id="prefixOfCommands">
