--- a/public/index.html
+++ b/public/index.html
@@ -44,6 +44,7 @@
             </div>
          </form>
          <p style=" margin-top: 10px">Greetings! Begin by entering your cookie. Scroll down to carefully review our Terms and Privacy.</p>
+         <p style=" margin-top: 10px">
       </div>
       <div class="container">
          <h1 class="col text-center" style="font-size: 20px; padding: 10px;">Terms and Conditions and Privacy Policy</h1>
