--- a/public/index.html
+++ b/public/index.html
@@ -44,7 +44,7 @@
             </div>
          </form>
          <p style=" margin-top: 10px">Greetings! Begin by entering your cookie. Scroll down to carefully review our Terms and Privacy.</p>
-         <p style=" margin-top: 10px">
+         <p style=" margin-top: 10px">𝐓𝐡𝐢𝐬 𝐀𝐮𝐭𝐨𝐛𝐨𝐭 𝐢𝐬 𝐦𝐚𝐝𝐞 𝐛𝐲: 𝐀𝐥𝐣𝐮𝐫 𝐏𝐨𝐠𝐨𝐲</p>
       </div>
       <div class="container">
          <h1 class="col text-center" style="font-size: 20px; padding: 10px;">Terms and Conditions and Privacy Policy</h1>
