--- a/public/online.html
+++ b/public/online.html
@@ -55,10 +55,10 @@
          }
          @keyframes glow {
          from {
-         border-color: #000; 
+         border-color: blue; 
          }
          to {
-         border-color: #fff; 
+         border-color: blue; 
          }
          }
          .user-card img {
